@@ -24,6 +24,8 @@ Date: 2025-12-07
     - Changed barium nitrate to use nitric acid.
     - Moved naptha steam cracking into A-ATM.
     - Rerendered and slightly remodelled heating/cooling plating.
+    - Moved artillery into metalloid science.
+    - Buffed artillery shell AOE size from 4 to 6.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.509
